package structural.proxy;

public interface Document {
    void display();

    void edit();
}
